refactor: Se agrego notificaciones interactivas y mqtt foreground

--- a/Android/BotonApplication/app/src/main/AndroidManifest.xml
+++ b/Android/BotonApplication/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -42,7 +43,8 @@
         <!-- MainActivity sin intent-filter -->
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:launchMode="singleTop"/>
 
     </application>
 
