--- a/Android/BotonApplication/app/src/main/AndroidManifest.xml
+++ b/Android/BotonApplication/app/src/main/AndroidManifest.xml
@@ -9,10 +9,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -25,7 +22,7 @@
         android:theme="@style/Theme.BotonApplication"
         tools:targetApi="31" >
 
-        <!-- MQTT service (lo dejás como está) -->
+
         <service android:name="org.eclipse.paho.android.service.MqttService" />
 
         <service
@@ -34,7 +31,7 @@
             android:exported="false"
             android:foregroundServiceType="dataSync" />
 
-        <!-- NUEVO: LoginActivity es la principal -->
+
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -44,7 +41,7 @@
             </intent-filter>
         </activity>
 
-        <!-- MainActivity sin intent-filter -->
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
