--- a/Android/BotonApplication/app/src/main/AndroidManifest.xml
+++ b/Android/BotonApplication/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
 
         <activity
             android:name=".LoginActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -45,11 +46,13 @@
 
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:launchMode="singleTop"/>
 
         <activity
             android:name=".HistoryActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:label="Historial de Alarmas"/>
 
